fix: CORS wildcard origin handling for production